feat(multi-tenancy): aislar TODOS los repositorios y servicios por tenantId
REPOSITORIOS — filtros por tenantId en todos los métodos:
- StoreRepository: findByTenantId, findByIdAndTenantId, existsByIdAndTenantId
- CategoryRepository: existsByStoreIdAndTenantId para validar ownership
- ProductRepository: findByIdAndStoreId, existsByIdAndTenantId
- InventoryStockRepository: métodos con tenantId en todas las queries
- InventoryMovementRepository: métodos con tenantId
- ShiftRepository: métodos con tenantId
- SaleRepository: métodos con tenantId, eliminados los sin tenant
- ClosingDepositRepository: reescrito con tenantId, sin findAll global
- TransactionRepository: reescrito con tenantId, sin findAll global
- SalaryPaymentRepository: reescrito con tenantId, sin findAll global
- SupplierPaymentRepository: reescrito con tenantId, sin findAll global
- GastoAdminRepository: reescrito con tenantId, eliminadas queries globales
- AppUserRepository: reescrito con tenantId

NUEVA UTILIDAD:
- TenantSecurityUtils.requireTenantId() — falla si no hay contexto
- TenantSecurityUtils.requireStore() — valida que storeId pertenezca al tenant

SERVICIOS — todos leen TenantContext y validan ownership:
- StoreV2Service, CategoryService, ProductService
- InventoryService (stock, movements, adjust, initStock)
- ShiftService, SalesService (createSale, cancelSale, closeShift, summaries)
- FormsService (closing, supplier, salary, gastoAdmin — todos con tenantId)
- TransactionService, AppUserService, DashboardService

ELIMINADAS las brechas críticas identificadas en auditoría:
- findAll() global en GastoAdmin, ClosingDeposit, Transaction, etc.
- Dashboard mostrando data de todos los tenants
- AppUser listando todos los usuarios del sistema

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>